# aoc

./: .gitpod.Dockerfile  .gitpod.yml  run.sh
1/: sum.sh
2/: first.pl  second.pl
2020/5/: first.clj
2021/1/: 1.rs
2021/10/: 10.py
2021/11/: 11.go  go.mod
2021/12/: Twelve.java
2021/13/: thing.ts
2021/14/: ex.P
2021/2/: 2  2.swift
2021/3/: 3.rb
2021/4/: 4.coffee  4.js  foo  package-lock.json
2021/5/: 5.clj
2021/6/: 6.clj
2021/7/: foo.d  main.d
2021/8/: .gitignore  detect.ex  eight  mix.exs  parse.jq
2021/8/lib/: eight.ex
2021/9/: 9.py
2024/1/: CMakeCache.txt  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
2024/1/cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
2024/1/source/: lib.cpp
2024/1/test/: CMakeLists.txt
2024/1/test/source/: one_test.cpp
3/: first.rs
4/: first.cpp
6/: bags.hs
